fixed jobs available not visible on ie11

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -170,6 +170,7 @@
       top: 0
 
   &__jobs-available-container
+    flex-shrink: 0 // https://github.com/philipwalton/flexbugs#flexbug-1
     z-index: 2
 
     @include bp('portrait')
@@ -369,7 +370,7 @@
       &:nth-child(2):before
         @include bp('portrait')
           background: linear-gradient(to bottom, $color-white, $color-transparent2)
-          top: 0
+          top: $jobs-available-height
           z-index: 1
 
       &:nth-last-child(2):after
@@ -387,7 +388,6 @@
 
     @include bp('portrait')
       height: 100%
-      overflow-y: auto
       -webkit-overflow-scrolling: touch
       padding: 0 $common-spacing
 
